--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.5.5",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate-2": "^2.0.14",
     "vue": "^3.4.15"
   },
   "devDependencies": {
