--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/language-plugin-pug": "^1.8.27",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "pug": "^3.0.2",
+    "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vue-tsc": "^1.8.27"
