--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/language-plugin-pug": "^1.8.27",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-vue": "^9.21.1",
     "postcss": "^8.4.35",
     "pug": "^3.0.2",
     "sass": "^1.70.0",
