--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate-2": "^2.0.14",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
