--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@heroicons/vue": "^2.1.1",
     "@vueuse/core": "^10.7.2",
     "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
